fixzed alignment

--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,5 @@ ul {color:gainsboro;}
 .attention{font-weight:bold;}
 .about {background:#00b3d1;}
 .skills{font-family:cursive;}
-.projects{text-align:right; background:whitesmoke;}
+.projects{text-align:center; background:whitesmoke;}
 .contact{text-align:center; background:greenyellow;}
